Progress bar: Current LVL tab bg alignment fix

--- a/public/stylesheets/sass/header.scss
+++ b/public/stylesheets/sass/header.scss
@@ -203,7 +203,7 @@ $light:lighten($header-bg, 7%);
 				behavior: url(/css3pie/PIE.htc);
 
 				border-left:none;
-				left:-23px;
+				left:-26px;
 				position:relative;
 				width:413px;
 				
