--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -328,7 +328,7 @@ ul {
         -moz-border-top-right-radius: 30px;
         behavior: url(/css3pie/PIE.htc);
         border-left: none;
-        left: -23px;
+        left: -26px;
         position: relative;
         width: 413px; }
         .header .masthead .mast_bottom .bar_progress .bar {
